# speaker-auth

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  core.py  docker-compose.yml  pyproject.toml  web_app.py  ws_server.py
.github/workflows/: main.yml
enrolled/: user123_enrolled_files.txt
enrolled/sessions/: TEST1.json  enroll_user123_1_1758798019.json  enroll_user123_1_1758798782.json  enroll_user123_1_1758855242.json  enroll_user123_1_1758855507.json  enroll_user123_1_1758858757.json  enroll_user123_1_1758858772.json  enroll_user123_1_1758859044.json  enroll_user123_1_1758859218.json  enroll_user123_1_1758859436.json  enroll_user123_1_1758859539.json  enroll_user123_1_1758859675.json  enroll_user123_1_1758861607.json  enroll_user123_2_1758855643.json  enroll_user123_2_1758858781.json  enroll_user123_2_1758858822.json  enroll_user123_2_1758859229.json  enroll_user123_2_1758859445.json  enroll_user123_2_1758859685.json  enroll_user123_2_1758859703.json  enroll_user123_2_1758859714.json  enroll_user123_2_1758861616.json  enroll_user123_2_1758861623.json  enroll_user123_3_1758855700.json  enroll_user123_3_1758858833.json  enroll_user123_3_1758859247.json  enroll_user123_3_1758859460.json  enroll_user123_3_1758859724.json  enroll_user123_3_1758859731.json  enroll_user123_3_1758861629.json  verify_user123_1758798842.json  verify_user123_1758855748.json  verify_user123_1758856589.json  verify_user123_1758859998.json  verify_user123_1758860009.json  verify_user123_1758860022.json  verify_user123_1758860036.json  verify_user123_1758860059.json  (+9 more)
(+5 files in other folders)
